# python-mumps

./: .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  AUTHORS.md  LICENSE  README.md  environment.yml  meson.build  meson.options  pyproject.toml  pytest.ini  setup.py  tempita.py
.github/prompts/: param_design.prompt.md
ci/: generate-conda-build-config
mumps/: __init__.py  _mumps.pxd.in  _mumps.pyx.in  _version.py  constants.py  meson.build  mumps.py
mumps/tests/: meson.build  test_mumps.py
mumpy/: __init__.py  _mumps.pxd  _mumps.pxd.in  _mumps.pxd.j2  _mumps.pyx  _version.py  cmumps.pxd  cmumps.py  fortran_helpers.py  lll.py  meson.build  mumps.py  mumps.pyx  mumps.pyx.in  mumps.pyx.j2  mumpy.py
mumpy/tests/: _test_utils.py  meson.build  test_lll.py  test_mumps.py
src/mumps/: __init__.py  _mumps.pyx.in  _param_base.py  enums.py  fortran_helpers.py  meson.build  mumps.py
src/mumps/tests/: _test_utils.py  meson.build  test_mumps.py
util/: notes.md  process_userguide.py  update_mumps_descriptions.py
